<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <!-- 库存盘点 任务列表页 -->
    <string name="check_task_number">任务号：</string>
    <string name="check_creater">创建人</string>
    <string name="check_time">创建时间</string>
    <string name="check_create_time">创建时间：</string>
    <string name="check_inventory">库存盘点</string>
    <string name="check_scan_barcode">请扫描商品条码</string>
    <string name="check_goods_barcode">商品条码</string>
    <string name="check_unit">单位</string>
    <string name="check_storage_location">库位</string>
    <string name="check_quality">数量</string>
    <string name="check_fine_goods">好品</string>
    <string name="check_actual_quotation">实盘数量:</string>
    <string name="check_done">该任务已完成</string>
    <string name="check_review">该任务审核中</string>
    <string name="check_list_empty">暂无数据</string>
    <string name="check_mission">查看任务</string>
    <string name="check_mission_rollback">撤回任务</string>
    <string name="check_start">开始盘点</string>
    <string name="check_continue">继续盘点</string>
    <string name="check_status_done">已完成</string>
    <string name="check_status_review">审核中</string>
    <string name="check_status_unknown">状态未知</string>
    <string name="check_limit">盘点范围：</string>
    <string name="check_create_task">新建盘点任务</string>
    <string name="check_roll_back">确定撤回盘点任务？</string>
    <string name="check_roll_back_success">任务撤回成功</string>
    <string name="check_roll_back_fail">任务撤回失败</string>
    <string name="check_list_reject_content">该盘点任务损溢单已被审批驳回，原因：%s，确认要重新盘点吗</string>

    <!-- 盘点流程框架 -->
    <string name="check_flow_1">盘点商品</string>
    <string name="check_flow_2">初盘核对</string>
    <string name="check_flow_3">复盘修改</string>
    <string name="check_flow_4">损益单</string>

    <!-- 盘点扫商品信息 -->
    <string name="check_goods_check_title">盘点商品</string>
    <string name="check_barcode">商品条码：</string>
    <string name="check_add_unit">单位：</string>
    <string name="check_specification_box">盒</string>
    <string name="check_good_quality">好品</string>
    <string name="check_number">数量</string>
    <string name="check_next">下一个</string>
    <string name="check_good">好品</string>
    <string name="check_bad">坏品</string>
    <string name="check_next_complete">已添加</string>
    <string name="check_next_err">无商品信息</string>
    <string name="check_next_max">每次最多盘200条商品</string>
    <string name="check_warning">有未提交的盘点记录，退出会清空盘点记录，是否退出？</string>
    <string name="check_searching_err">没有搜索到商品</string>
    <string name="check_max_value_err">已超出最大值</string>
    <string name="check_not_in_err">该商品不在盘点范围</string>
    <string name="check_storage_no_err">该商品无库位信息</string>
    <string name="check_box_product_num">条码：</string>
    <string name="check_box_product_ratio">组合系数：</string>
    <string name="check_son_product_title">子品：</string>
    <string name="check_son_product_num">实盘数量：</string>
    <string name="check_good_loc">便利店好品库位</string>
    <string name="check_bad_loc">便利店坏品库位</string>
    <string name="check_stock">库存：</string>

    <!-- 盘点记录 -->
    <string name="check_record_item_barcode">商品条码：</string>
    <string name="check_record_actual_account">实盘数量：</string>
    <string name="check_record">盘点记录</string>
    <string name="check_record_finish">完成盘点</string>
    <string name="check_record_location">库位：</string>
    <string name="check_record_unit">单位：</string>
    <string name="check_record_confirm_ing">提交中</string>
    <string name="check_record_confirm_success">提交成功</string>
    <string name="check_record_confirm_err">无盘点记录</string>
    <string name="check_record_confirm_notice">确定提交？</string>
    <string name="check_record_delete_confirm_notice">确定删除？</string>
    <string name="check_record_check_record_err">暂时无法获取内容盘点记录</string>

    <!-- 新建盘点任务 -->
    <string name="check_new_task_title">盘点任务</string>
    <string name="check_new_task_predict_check_time">预计盘点时间</string>
    <string name="check_new_task_check_scope">盘点范围</string>
    <string name="check_new_task_whether_show_inventory">是否显示库存快照</string>
    <string name="check_new_task_finish_shop_null">完成盘点时，若商品未填写数据</string>
    <string name="check_new_task_assign_category">指定类目</string>
    <string name="check_new_task_inventory_show">显示</string>
    <string name="check_new_task_inventory_not_show">不显示</string>
    <string name="check_new_task_default_zero">默认为0</string>
    <string name="check_new_task_default_inventory">默认当前库存</string>
    <string name="check_new_task_create_task">创建任务</string>
    <string name="check_new_task_submit_check">提交复盘</string>
    <string name="check_new_task_data_selected">选择时间</string>
    <string name="check_new_task_shop_select">商品筛选</string>
    <string name="check_new_task_dialog_button_text">确定</string>
    <string name="check_new_task_save_task">保存任务</string>
    <string name="check_new_task_cancellation_task">作废</string>
    <string name="check_new_task_toast_select_time">请选择盘点时间</string>
    <string name="check_new_task_toast_select_check_cope">请选择盘点范围</string>
    <string name="check_new_task_toast_select_whether_inventory">请选择是否显示库存快照</string>
    <string name="check_new_task_toast_select_finish_check">请选择完成盘点时是否展示库存</string>
    <string name="check_new_task_toast_select_create_success">创建成功</string>
    <string name="check_new_task_toast_select_create_lose">创建盘点任务失败,请重试</string>
    <string name="check_new_task_toast_select_update_lose">查看失败，请重试</string>
    <string name="check_new_task_toast_select_save_success">保存成功</string>
    <string name="check_new_task_toast_select_save_lose">保存失败，请重试</string>
    <string name="check_new_task_toast_select_cancel_success">作废成功</string>
    <string name="check_new_task_toast_select_cancel_lose">作废失败，请重试</string>
    <string name="check_new_task_delete_confirm_notice">确定作废该单据？</string>
    <string name="check_new_task_delete_confirm_notice_preorder">确定删除该单据？</string>
    <string name="check_new_task_select_category">请选择类目</string>
    <string name="check_new_task_integer_inventory">整库盘点</string>
    <string name="check_new_task_layout_no_data">暂无记录</string>
    <!--    初盘核对（漏盘）-->
    <string name="check_missed_sku_cnt_title">漏盘(%d)</string>
    <string name="check_missed_switch_desc">过滤库存为0的商品</string>
    <string name="check_missed_bottom_btn">提交初盘</string>
    <string name="check_missed_sku_upc">商品条码：</string>
    <string name="check_missed_sku_loc_type">库位：</string>
    <string name="check_missed_sku_empty_loc">--</string>
    <string name="check_missed_stock_qty">库存：</string>
    <string name="check_missed_uncheck">未盘点</string>
    <string name="check_missed_dialog_title">商品信息</string>
    <string name="check_missed_dialog_upc_more">查看更多</string>
    <string name="check_missed_dialog_ensure">确定</string>
    <string name="check_missed_dialog_sku_unit">单位：</string>
    <string name="check_missed_dialog_sku_loc_type">库位：</string>
    <string name="check_missed_dialog_sku_qty">数量</string>
    <string name="check_missed_dialog_sku_unit_none">未知</string>
    <string name="check_missed_dialog_choose_loc_title">选择库位</string>
    <string name="check_missed_input_qty_less_than_zero">数量不能小于0</string>
    <string name="check_missed_input_qty_more_than_limit">数量不能超过最大值</string>
    <string name="check_missed_input_qty_tips">请输入数量</string>
    <string name="check_missed_sku_no_data">无漏盘</string>
    <string name="check_missed_submit_fail">提交初盘结果失败</string>
    <string name="check_missed_show_exit">切换页面会清空暂存核对信息，是否切换？</string>

    <string name="check_preorder_task_no">任务号：</string>
    <string name="check_preorder_task_create_time">创建时间：</string>
    <string name="check_preorder_id">预盘单号：</string>
    <string name="check_preorder_time">盘点时间：</string>
    <string name="check_preorder_user">盘点人：</string>
    <string name="check_preorder_tips">所有盘点结束后，进入初盘核对</string>
    <string name="check_preorder_back">开始盘点</string>
    <string name="check_preorder_next">初盘核对</string>

    <string name="check_category_title">指定类目</string>
    <string name="check_category_btn_cancel_text">取消</string>
    <string name="check_category_btn_ensure_text">确定</string>
    <string name="check_category_select_cnt">已选择%d个类目</string>
    <string name="check_category_cur_index">所在类目：</string>

    <!-- 损益单Fragment -->
    <string name="check_profit_loss_total">盘损总金额</string>
    <string name="check_profit_earn_total">盘盈总金额</string>
    <string name="check_profit_mine_total">损益总金额</string>
    <string name="check_profit_create_notice">损益尚未生成，点击生成损益</string>
    <string name="check_profit_create_err">损益生成失败，点击重新生成损益</string>
    <string name="check_profit_creating">损益单生成中，请稍后查看</string>
    <string name="check_profit_none">当前盘点任务无损益</string>
    <string name="check_profit_complete">结束盘点任务</string>
    <string name="check_profit_complete_notice">当前盘点任务已结束</string>
    <string name="check_profit_complete_err">结束当前盘点任务失败</string>
    <string name="check_profit_detail">获取损益明细</string>
    <string name="check_profit_create">生成损益</string>
    <string name="check_profit_cancel">撤销损益</string>
    <string name="check_profit_cancel_success">撤销损益成功！</string>
    <string name="check_profit_commit">提交审批</string>
    <string name="check_profit_commit_success">提交成功！</string>
    <string name="check_profit_loss_cnt">盘亏(%s)</string>
    <string name="check_profit_over_cnt">盘盈(%s)</string>
    <string name="check_profit_equal_cnt">无差异(%s)</string>
    <string name="check_profit_serial_number">序号</string>
    <string name="check_profit_sku_name">商品</string>
    <string name="check_profit_tab_1">库位</string>
    <string name="check_profit_tab_3">盘点人</string>
    <string name="check_profit_tab_4">库存数量</string>
    <string name="check_profit_tab_5">盘点数量</string>
    <string name="check_profit_tab_6">差异数量</string>
    <string name="check_profit_tab_7">加权平均价</string>
    <string name="check_profit_tab_8">差异金额</string>
    <string name="check_profit_cancel_confirm">确认撤销损益单？</string>
    <string name="check_profit_commit_confirm">确认提交损益单？</string>

    <string name="check_review_serial_number">序号</string>
    <string name="check_review_sku_name">商品</string>
    <string name="check_review_loc_name">库位</string>
    <string name="check_review_user">盘点人</string>
    <string name="check_review_stock_qty">库存数量</string>
    <string name="check_review_check_qty">盘点数量</string>
    <string name="check_review_diff_qty">差异数量</string>
    <string name="check_review_avg_amount">加权平均价</string>
    <string name="check_review_diff_amount">差异金额</string>
    <string name="check_review_loss_cnt">盘亏(%d)</string>
    <string name="check_review_over_cnt">盘盈(%d)</string>
    <string name="check_review_equal_cnt">无差异(%d)</string>
    <string name="check_review_commit">提交复盘</string>
    <string name="check_review_sort_type_amount">差异金额排名</string>
    <string name="check_review_sort_type_qty">差异数量排名</string>
    <string name="check_review_dialog_btn_reset">重置</string>
    <string name="check_review_dialog_btn_ensure">确定</string>
    <string name="check_review_dialog_edit_sku_tile">商品信息</string>
    <string name="check_review_pre_order">预盘单：%s</string>
    <string name="check_review_pre_order_qty">数量</string>
    <string name="check_review_sort_top_50">前50</string>
    <string name="check_review_sort_top_100">前100</string>
    <string name="check_review_sort_last_50">后50</string>
    <string name="check_review_sort_last_100">后100</string>
    <string name="check_review_dialog_upc_label">商品条码：</string>
    <string name="check_review_dialog_loc_label">库位：</string>
    <string name="check_review_dialog_qty_label">已盘：</string>
</resources>